fix(component): fix gap in pixels in media

--- a/src/app/features/carriages/features/components/carriages/carriages.component.scss
+++ b/src/app/features/carriages/features/components/carriages/carriages.component.scss
@@ -168,7 +168,50 @@ ttp-carriage-row {
   display: flex;
 }
 
-@media screen and (width >= 300px) and (width <= 760px) {
+@media screen and (width >= 900px) and (width <= 1300px) {
+  .carriages {
+    &_carriage-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 28vw;
+    }
+  }
+}
+
+@media screen and (width >= 760px) and (width <= 899.98px) {
+  .carriages {
+    &_carriage-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 40vw;
+
+      &.ticket {
+        transform: rotate(-90deg) translateX(-50%);
+      }
+    }
+
+    &_carriage-row-create-ticket {
+      transform: translateX(50vw);
+    }
+
+    &_carriage-shape-create-ticket {
+      position: relative;
+      transform: rotate(-180deg) translate(-160px, 80px);
+
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+
+      width: 640px;
+      height: 254px;
+      padding: 10px;
+    }
+  }
+}
+
+@media screen and (width >= 300px) and (width <= 759.98px) {
   .carriages {
     &_carriage-wrapper {
       display: flex;
@@ -207,49 +250,6 @@ ttp-carriage-row {
 
     &_line-dividing {
       margin-top: 680px;
-    }
-  }
-}
-
-@media screen and (width >= 759.98px) and (width <= 900px) {
-  .carriages {
-    &_carriage-wrapper {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 40vw;
-
-      &.ticket {
-        transform: rotate(-90deg) translateX(-50%);
-      }
-    }
-
-    &_carriage-row-create-ticket {
-      transform: translateX(50vw);
-    }
-
-    &_carriage-shape-create-ticket {
-      position: relative;
-      transform: rotate(-180deg) translate(-160px, 80px);
-
-      display: flex;
-      align-items: center;
-      justify-content: space-evenly;
-
-      width: 640px;
-      height: 254px;
-      padding: 10px;
-    }
-  }
-}
-
-@media screen and (width >= 899.98px) and (width <= 1300px) {
-  .carriages {
-    &_carriage-wrapper {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 28vw;
     }
   }
 }
